Домашнее задание 1 | Заготовка для социальной сети